Fix site width on mobile

--- a/_dev/scss/components/_sections.scss
+++ b/_dev/scss/components/_sections.scss
@@ -1,5 +1,6 @@
 .wrapper--front {
   width: var(--article-width);
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -8,6 +9,10 @@
   padding-top: 40px;
   // grid-column: 1 / -1;
   margin-bottom: 40px;
+  @media screen and (max-width: 600px) {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .section__title {
