--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,12 +111,17 @@ pre code {
 
 .wrapper--front {
   width: var(--article-width);
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto; }
 
 .section {
   padding-top: 40px;
   margin-bottom: 40px; }
+  @media screen and (max-width: 600px) {
+    .section {
+      padding-left: 10px;
+      padding-right: 10px; } }
 
 .section__title {
   border-bottom: 1px solid #dadada;
